fix: accessability fixes & better spacing for blog-page & post

--- a/src/styles/blog-page.css
+++ b/src/styles/blog-page.css
@@ -1,9 +1,12 @@
 .blog-list {
-  padding-top: 60px;
+  padding: 30px 0;
   display: flex;
   flex-direction: column;
   align-content: center;
 
+  @media (min-width: 768px) {
+    padding: 60px 0;
+  }
   &__new {
     display: none;
 
