--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,6 +1,6 @@
 [data-theme="light"] {
   .navbar {
-    background-color: rgba(13, 10, 31, 0.7);
+    background-color: rgba(23, 22, 40, 0.68);
   }
 }
 
